.omo/evidence/task-160-chain22-contour/final-regression-416668.err
/bin/bash: warning: setlocale: LC_ALL: cannot change locale (C.UTF-8)
  File "<stdin>", line 12
    (Path(/public/home/jxm/codex_runs/z1-task160-chain22-contour-20260707/evidence/benchmark-04-05-spplus-final.md))
                                                                                             ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
